# jaya

./: Cargo.toml  README.md
jaya-ecs/: Cargo.toml
jaya-ecs/src/: collections.rs  component.rs  container.rs  entity.rs  lib.rs  system.rs  universe.rs
jaya-ecs/src/extract/: mod.rs  subextract.rs
jaya-test/: Cargo.toml
jaya-test/src/: main.rs
mvec/: Cargo.toml
mvec/src/: alink.rs  avec.rs  lib.rs  mvec.rs
